--- a/ui-project/package.json
+++ b/ui-project/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
     "react-window": "^1.8.5",
+    "rxjs": "^6.5.5",
     "styled-components": "^4.4.1"
   },
   "scripts": {
