--- a/batranii-sunt-ai-nostri/pom.xml
+++ b/batranii-sunt-ai-nostri/pom.xml
@@ -53,7 +53,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
