--- a/ui-project/package.json
+++ b/ui-project/package.json
@@ -6,12 +6,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "canvasjs": "^1.8.3",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -19,7 +18,7 @@
     "react-scripts": "^2.1.8",
     "react-window": "^1.8.5",
     "rxjs": "^6.5.5",
-    "styled-components": "^4.4.1"
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +43,7 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
-    "reactstrap": "^8.4.1"
-  },
-  "proxy": "http://localhost:8080/api"
+    "reactstrap": "^8.4.1",
+    "sass": "^1.51.0"
+  }
 }
